Fix: Adjust logo alignment in cards
Adjust the logo alignment to the right and left side of the cards.

--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -2,6 +2,7 @@
 
 
 
+
 .logo-image {
   max-width: 300px !important;
   width: auto !important;
@@ -29,19 +30,20 @@
   .logo-image {
     max-width: 240px !important;
     height: 90px !important;
-    margin-left: 0 !important; /* Changed from auto to 0 to align left */
+    margin-left: 0 !important; 
     margin-right: auto !important;
-    margin-top: -14px !important; /* Changed from -15px to -14px to move 1px more down */
-    right: 0 !important; /* Removed the mobile right offset */
+    margin-top: -14px !important;
+    right: 0 !important;
     position: relative !important;
-    left: -50px !important; /* Adding left offset to move logo more to the left */
+    left: -20px !important; /* Changed from -50px to -20px to move more to the right */
   }
   
   .logo-container {
-    justify-content: flex-start !important; /* Changed from center to flex-start to align left */
-    padding-left: 15px !important; /* Added left padding to prevent logo from touching the edge */
-    padding-right: 0 !important; /* Removed right padding */
+    justify-content: flex-start !important;
+    padding-left: 30px !important; /* Increased from 15px to 30px to align with cards */
+    padding-right: 0 !important;
   }
 }
+
 
 
